# src/serge-manager/server/src/operations/sergeFsm.js
@@ -1,5 +1,16 @@
 "use strict";
 
+const {
+  cancel,
+  modeToPlace,
+  chooseStock,
+  checkLocation,
+  placeInsufficientQuantity,
+  placeSufficientMoreLocations,
+  placeSufficientNoMoreLocations,
+  confirmInsufficientQuantity
+} = require("./operations");
+
 const states = {
   CHOOSE_MODE: "CHOOSE_MODE",
   START_PLACE: "START_PLACE",
@@ -12,23 +23,36 @@ const EmployeeFSM = require("./fsm");
 
 const createFSM = (req, employee) => {
   let stockClient = new req.dependencies.ISergeStockClient(req.dependencies.sergeStockUrl);
+  let locationsClient = new req.dependencies.ISergeLocationsClient(req.dependencies.sergeLocationsUrl);
+  let ordersClient = new req.dependencies.ISergeOrdersClient(req.dependencies.sergeOrdersUrl);
 
   let fsm = new EmployeeFSM(employee);
 
-  fsm.addTransition(states.CHOOSE_MODE, (employee, text) => text.match(/place/), states.START_PLACE);
+  fsm.addState(states.CHOOSE_MODE, () => `Choose mode`);
+  fsm.addState(states.START_PLACE, () => `Scan a pallet`);
+  fsm.addState(states.GO_TO_LOCATION, () => `Go to location ${employee.state.currentLocation.match(/[0-9]+$/)[0]}`);
+  fsm.addState(states.PLACE, () => `Place ${employee.state.quantityToPlace} cases`);
+  fsm.addState(states.CONFIRM_PLACE, () => `Confirm ${employee.state.statedQuantity} cases`);
 
-  fsm.addTransition(states.START_PLACE, async (employee, text) => {
-    let stock = await stockClient.getAll();
+  fsm.addTransition(states.CHOOSE_MODE, (text) => modeToPlace(text), states.START_PLACE);
 
-    let stockItem = stock.find(s => s._links.self.href.match(new RegExp(`stock/${text}`)));
-    if (!stockItem) { return; }
+  fsm.addTransition(states.START_PLACE, (text) => chooseStock(employee, text, stockClient, ordersClient, locationsClient), states.GO_TO_LOCATION);
+  fsm.addTransition(states.START_PLACE, (text) => cancel(text), states.CHOOSE_MODE);
 
-    employee.state.currentStock = stockItem._links.self.href;
+  fsm.addTransition(states.GO_TO_LOCATION, (text) => checkLocation(employee, text, stockClient, ordersClient, locationsClient), states.PLACE);
+  fsm.addTransition(states.GO_TO_LOCATION, (text) => cancel(text), states.CHOOSE_MODE);
 
-    return true;
-  }, states.GO_TO_LOCATION);
+  fsm.addTransition(states.PLACE, (text) => placeInsufficientQuantity(employee, text), states.CONFIRM_PLACE);
+  fsm.addTransition(states.PLACE, (text) => placeSufficientMoreLocations(employee, text, stockClient, ordersClient, locationsClient), states.GO_TO_LOCATION);
+  fsm.addTransition(states.PLACE, (text) => placeSufficientNoMoreLocations(employee, text), states.START_PLACE);
+  fsm.addTransition(states.PLACE, (text) => cancel(text), states.CHOOSE_MODE);
 
-  fsm.addTransition(states.);
+  fsm.addTransition(states.CONFIRM_PLACE, (text) => confirmInsufficientQuantity(employee, text, stockClient, ordersClient, locationsClient), states.START_PLACE);
+  fsm.addTransition(states.CONFIRM_PLACE, (text) => cancel(text), states.PLACE);
+
+  fsm.initialize(states.CHOOSE_MODE);
+
+  return fsm;
 };
 
 module.exports = {
